<resources>
    <string name="app_name">MenuAchat</string>
    <string name="text_prix">Prix</string>
    <string name="text_plat">Plat</string>
    <string name="text_pris">Pris</string>
    <string name="text_categorie">Categorie</string>
    <string name="text_prixTotal">Total :</string>
    <string name="layout_weigth_one">1</string>
    <string name="text_quantite">Quantité</string>
    <string name="text_genereList">Générer la liste</string>
    <string name="text_retourPlat">Retourner à la liste des plats</string>
    <string name="text_ingredient">Ingrédient</string>
    <string name="text_creationingredient">Nouvel Ingrédient</string>
    <string name="text_nom">Nom</string>
    <string name="text_confirmation">Confirmer</string>
    <string name="text_nouveauPlat">Nouveau plat</string>
    <string name="text_anullation">Annuler</string>
    <string name="text_nom_magasin">Nom du Magasin</string>
    <string name="text_choice_magasin">Choix du magasin</string>
    <string name="text_lieu">Lieu</string>
    <string name="text_nouveauMagasin">Nouveau Magasin</string>
    <string name="text_ajouterIngredient">Ajouter un ingrédient</string>
    <string name="text_questionSuppression">Voulez vous supprimer </string>
    <string name="text_colorCongigurateur">Configurateur de Couleurs</string>
    <string name="text_ColorIngredientCat">Couleurs des Catégories d\'ingrédient</string>
    <string name="text_ColorPrix">Couleurs des prix</string>
    <string name="text_rouge">Rouge</string>
    <string name="text_vert">Vert</string>
    <string name="text_bleu">Bleu</string>
    <string name="text_supplements">Suppléments :</string>
    <string name="text_questionSuppressionSupplement">Voulez vous supprimer les supplements ? </string>
    <string name="text_questionQuantite_1">Quelle quantité de </string>
    <string name="text_questionQuantite_2"> souhaitez vous prendre ?</string>
    <string name="text_question_prix">Quel est le prix de cette ingrédient ?</string>
    <string name="text_question_supplements">Quel est le prix du suppléments à ajouter ?</string>
    <string name="text_dejaMaison">En stock</string>
    <string name="text_ClearList">Vider la liste</string>
    <string name="text_Accompagnement">Avec un accompagnement</string>
    <string name="text_Ajoutcomfirmer"> a été ajouté à la liste</string>
    <string name="text_databsaeModifier">Modifier mes données</string>
    <string name="text_questionDatabaseModifier">En modifiant vos données , votre liste de course va être effacé.\n Voulez vous continuer ?</string>

    <string name="text_regrouperParCategorie">Regrouper par categorie</string>
    <string name="text_rechercherIngrédient">Rechercher un ingrédient</string>
    <string name="text_supprimerDonner">Supprimer mes données</string>
    <string name="text_supprimer">Supprimer</string>

    <string name="colorSelectorMinValue">0</string>
    <string name="colorSelectorMaxValue">255</string>

    <string name="error_IngredientExistant">Ce nom d\'ingrédient existe déjà</string>
    <string name="error_PlatExistant">Ce nom de plat existe déjà</string>
    <string name="error_MagasinExistant">Ce magasin existe déjà</string>
    <string name="error_Name_notWrite_ingredient">Veuillez donnez un nom à votre ingrédient</string>
    <string name="error_Magasin_needNameOrLocalisation">Veuillez donnez un nom et lieu pour le magasin</string>
    <string name="error_Plat_needNameOrIngredient">Veuillez donnez un nom et une liste d\'ingrédient pour le plat</string>
    <string name="error_ingredientNotFound">Cette ingrédient n\'existe pas ou fait partie d'un plat</string>
    <string name="error_platNotFound">Ce plat n\existe pas </string>
    <string name="error_zeroQuantite">Vous ne voulez pas de ça</string>
    <string name="error_noQuestion">Pas de question => surement une erreur</string>
    <string name="error_SupprimerIngredient"> ne peut être supprimer car il est utilisé dans les plats suivant : \n</string>



</resources>

