<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_creationingredient"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:layout_weight="@string/layout_weigth_one"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="@string/layout_weigth_one"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="@string/layout_weigth_one"
                android:layout_height="wrap_content"
                android:text="@string/text_nom"
                />
            <EditText
                android:id="@+id/nomEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_weight="3"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="@string/layout_weigth_one"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="@string/layout_weigth_one"
                android:layout_height="wrap_content"
                android:text="@string/text_categorie"
                />
            <Spinner
                android:id="@+id/categorieEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_weight="3" />
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_confirmation"
            android:layout_weight="@string/layout_weigth_one"
            android:id="@+id/button_comfimer_creator_ingredient"
            />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>