<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/mainLayout"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="top"
            android:layout_weight="@string/layout_weigth_one"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/text_pris"
                android:textAllCaps="true"
                android:textSize="12dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="22"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/text_categorie"
                android:textAllCaps="true"
                android:textSize="10dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="38"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/text_ingredient"
                android:textAllCaps="true"
                android:textSize="12dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="20"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:text="@string/text_quantite"
                android:textAllCaps="true"
                android:textSize="10dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:text="@string/text_prix"
                android:textAllCaps="true"
                android:textSize="12dp"
                android:layout_gravity="center"
                android:textAlignment="center"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="8"
            android:fillViewport="true"
            android:id="@+id/scrollPane">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/ingredientList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="@string/layout_weigth_one" />

        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:id="@+id/text_clearSupplement"
                android:text="@string/text_supplements"
                android:layout_weight="2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_supplements"
                android:layout_margin="10dp"
                android:layout_weight="@string/layout_weigth_one"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="@string/layout_weigth_one"
                android:layout_margin="8dp"
                android:layout_height="wrap_content"
                android:text="@string/text_prixTotal"
                android:textAllCaps="true"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="@string/layout_weigth_one"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:id="@+id/prixTotal"
                android:text=""/>
        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_retourPlat"
            android:layout_weight="@string/layout_weigth_one"
            android:id="@+id/button_plat"
            />

    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/IngredientAjout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="10dp"
        android:clickable="true"
        android:layout_alignEnd = "@+id/mainLayout"
        android:layout_alignBottom="@+id/mainLayout"
        app:srcCompat="@android:drawable/ic_input_add" />
</RelativeLayout>

</android.support.constraint.ConstraintLayout>