<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Activity.Plat.ListePlatActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:id="@+id/scrollPane"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="top"
            android:layout_weight="@string/layout_weigth_one"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="@string/layout_weigth_one"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:text="@string/text_pris"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="@string/layout_weigth_one"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:text="@string/text_categorie"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="@string/layout_weigth_one"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:text="@string/text_plat"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="@string/layout_weigth_one"
                android:layout_margin="10dp"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="@string/text_prix"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/platList"
            xmlns:tools="platList"
            android:layout_weight="@string/layout_weigth_one"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="@string/layout_weigth_one"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/text_clearSupplement"
                android:text="@string/text_supplements"
                android:layout_weight="2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_supplements"
                android:layout_margin="10dp"
                android:layout_weight="@string/layout_weigth_one"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="@string/layout_weigth_one"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:text="@string/text_prixTotal"
                android:textAllCaps="true"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="@string/layout_weigth_one"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:id="@+id/prixTotal"
                android:text=""/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_genereList"
            android:id="@+id/buttonGenere"
            android:layout_weight="@string/layout_weigth_one"
            />
    </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/platAjout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/scrollPane"
        android:layout_alignBottom="@+id/scrollPane"
        android:layout_margin="10dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_input_add"  />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>