<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/mainLayout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:text="@string/text_databsaeModifier"
        android:gravity="center"
        android:layout_weight="1"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="8"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
           <TextView
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:layout_weight="1"
               android:text="@string/text_plat"
               android:gravity="center"/>
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="9"
                android:id="@+id/platList">

            </android.support.v7.widget.RecyclerView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:text="@string/text_ingredient"
                android:gravity="center"/>
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="9"
                android:id="@+id/ingredientList">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:id="@+id/button_comfirmer"
        android:text="@string/text_confirmation"
        />

</LinearLayout>
</android.support.constraint.ConstraintLayout>