<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="@string/layout_weigth_one"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/text_choice_magasin"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="@string/layout_weigth_one"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="@string/layout_weigth_one"
                android:text="@string/text_nom_magasin"
                />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="@string/layout_weigth_one"
                android:id="@+id/choixMagasinSpinnerMagasin"
                >

            </Spinner>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="@string/layout_weigth_one"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="@string/layout_weigth_one"
                android:text="@string/text_lieu"
                />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="@string/layout_weigth_one"
                android:id="@+id/choixMagasinSpinnerLieu"
                >

            </Spinner>

        </LinearLayout>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/MagasinAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="10dp"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_input_add"  />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_confirmation"
            android:layout_weight="@string/layout_weigth_one"
            android:id="@+id/choixMagasinComfirmer"
            />



    </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>