<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_nouveauPlat"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:layout_weight="@string/layout_weigth_one"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="@string/layout_weigth_one"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="@string/layout_weigth_one"
                android:layout_height="wrap_content"
                android:text="@string/text_nom"
                />
            <EditText
                android:id="@+id/nomPlatEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_weight="3"
                android:maxLines="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="@string/layout_weigth_one"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="@string/layout_weigth_one"
                android:layout_height="wrap_content"
                android:text="@string/text_categorie"
                />


            <Spinner
                android:id="@+id/categoriePlatEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_weight="3" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="2"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_ingredient"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:layout_weight="@string/layout_weigth_one"
            />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/IngredientAjoutPlat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="true"
                app:srcCompat="@android:drawable/ic_input_add"
                android:layout_weight="@string/layout_weigth_one"
                />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ingredientListForPlat"
            android:layout_weight="@string/layout_weigth_one"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_confirmation"
            android:layout_weight="@string/layout_weigth_one"
            android:id="@+id/button_comfimer_creator_Plat"
            />

    </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>