<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/text_colorCongigurateur"
            android:layout_weight="1"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="22dp"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:layout_weight="5">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/text_ColorIngredientCat"
                    />

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/configCouleurCategoriePlat">
                </android.support.v7.widget.RecyclerView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/text_ColorPrix"
                    />

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/configCouleurPrix">
                </android.support.v7.widget.RecyclerView>



            </LinearLayout>
        </ScrollView>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/text_confirmation"
            android:layout_weight="1"
            android:id="@+id/button_comfirmer"
            />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>